# Bots

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
config/: bots.yaml  equity_options.yaml  equity_options_universe.yaml  sources.yaml
docs/: market-maker.md  mercury-ensemble-calibration.md  usda-softs-bots.md
scripts/: backtest_softs.py  build_carry.py  build_dcot.py  build_shfe_carry.py  com.quantbots.daily.plist  com.quantbots.equity_options.intraday.plist  com.quantbots.equity_options.plist  daily_cycle.sh  diffusion_bench.py  equity_options_cycle.sh  equity_options_monitor.sh  manual_trade.py  mint_bot_accounts.py  momentum_ab.py  provide_ag_liquidity.py  research_pairs.py  research_softs.py  seed_liquidity.py  validate_news_leadlag.py
src/constraint_scanner/: api.py  cache.py  cli.py  detectors.py  models.py
src/quantbots/: __init__.py  backtest.py  cli.py  config.py  maker.py  portfolio.py  resolvability.py  runner.py  sizing.py
src/quantbots/dashboard/: __init__.py  data.py  server.py
src/quantbots/equity_options/: SAFETY.md  __init__.py  _alpaca_http.py  backtest.py  cli.py  config.py  edge.py  hedge.py  manage.py  occ.py  portfolio.py  positions.py  recommend.py  selection.py  sizing.py  vrp.py
src/quantbots/llm/: __init__.py  bench.py  client.py  comment.py  extractor.py  forecastbench_eval.py  health.py  mercury.py  news_extractor.py
src/quantbots/manifold/: __init__.py  client.py  websocket.py
src/quantbots/processing/: __init__.py  signals.py
src/quantbots/research/: __init__.py  charts.py  data_fetch.py  pairs.py  report.py
src/quantbots/sources/: __init__.py  atl3.py  base.py  cftc.py  fas_psd.py  fred.py  ice_stocks.py  ingest.py  nass.py  noaa.py  rss.py  stooq.py  usdm.py  weather.py  worldbank.py
src/quantbots/store/: __init__.py  db.py  pnl.py  schema.sql  trades.py
src/quantbots/strategies/: __init__.py  _mixture.py  _model.py  _signal_base.py  base.py  cftc_positioning.py  cocoa_atlantic.py  cocoa_fundamental.py  cocoa_stocks.py  coffee_consumption.py  diffusion_mc.py  (+26 more)
tests/: test_backtest.py  test_climate_commodity.py  test_cocoa_atlantic.py  test_cocoa_stocks.py  test_commodity_spot.py  test_cotton_condition.py  test_detectors.py  test_diffusion_mc.py  test_drought_cotton.py  test_ensemble.py  test_eo_alpaca_symbol.py  test_eo_backtest.py  test_eo_direction.py  test_eo_factors.py  test_eo_forecast.py  test_eo_greeks.py  test_eo_hedge.py  test_eo_manage.py  test_eo_safety.py  test_eo_screen.py  test_eo_selection.py  test_eo_signal.py  test_eo_surface.py  test_eo_tal_signals.py  test_eo_tal_validate.py  test_eo_vrp.py  test_fred_cache.py  test_ladder.py  test_ladder_arb.py  test_llm_bench.py  test_llm_strategy.py  test_market_maker.py  test_mercury_client.py  test_mercury_ensemble.py  test_mixture.py  test_news_drift.py  test_pair_trading.py  test_pnl.py  test_portfolio.py  test_resolvability.py  (+9 more)
web/: .gitignore  index.html  package.json  vite.config.ts
web/src/: App.tsx
(+54 files in other folders)
