[project]
name = "quantbots"
version = "0.1.0"
description = "Reusable framework for building quant trading bots on the private Manifold clone"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
]

# Heavier / optional capabilities. Opt in with `uv sync --extra <name>`.
[project.optional-dependencies]
# Quant strategies that fit distributions to strike ladders (surface_arb).
quant = ["numpy>=1.26", "scipy>=1.11"]
# Local-LLM strategies via an OpenAI-compatible endpoint (Ollama / LiteLLM).
llm = ["openai>=1.30"]
# Live price cache over the platform websocket.
realtime = ["websockets>=12.0"]
# Local web dashboard (`quantbots dashboard`).
dashboard = ["flask>=3.0"]
# Pairs research / correlation analysis (`scripts/research_pairs.py`).
research = ["numpy>=1.26", "scipy>=1.11", "pandas>=2.2", "matplotlib>=3.9", "yfinance>=0.2"]
# REAL listed-options bot (fenced equity_options/ package). Trades via Alpaca.
# Uses plain `requests` for the broker (no SDK) to match the repo's thin-client style.
equity_options = ["numpy>=1.26", "scipy>=1.11", "pandas>=2.2", "yfinance>=0.2", "requests>=2.31", "typer>=0.12"]

[project.scripts]
quantbots = "quantbots.cli:app"
eo = "quantbots.equity_options.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
